@@ -18,7 +18,7 @@
 
 main -->
 	{ random__init(0, RS0) },
-	{ random__permutation(1024, Perm, RS0, RS1) },
+	{ random__permutation(range(0, 1023), Perm, RS0, RS1) },
 	{ choose_signs_and_enter(Perm, 42, Solns1, RS1, RS2) },
 	( { test_tables(Solns1, yes) } ->
 		io__write_string("First test successful.\n")
@@ -44,6 +44,14 @@ main -->
 		io__write_string("Fourth test unsuccessful.\n")
 	).
 	% io__report_tabling_stats.
+
+:- func range(int, int) = list(int).
+range(Min, Max) =
+	(if Min > Max then
+		[]
+	else
+		[Min | range(Min + 1, Max)]
+	).
 
 :- pred choose_signs_and_enter(list(int)::in, T::in, list(record(int, T))::out,
 	random__supply::mdi, random__supply::muo) is det.
